--- a/src/main/webapp/CSS/equiposDeptStyle.css
+++ b/src/main/webapp/CSS/equiposDeptStyle.css
@@ -8,3 +8,9 @@ and open the template in the editor.
     Author     : Francisco_Antonio
 */
 
+a.disabled {
+  /* Make the disabled links grayish*/
+  color: gray;
+  /* And disable the pointer events */
+  pointer-events: none;
+}
